--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "3.4.1",
     "react-virtualized": "^9.21.2",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "screenfull": "^5.0.2"
   },
   "scripts": {
