--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-virtualized": "^9.21.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "screenfull": "^5.0.2"
+    "screenfull": "^5.0.2",
+    "union-value": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
